--- a/style.css
+++ b/style.css
@@ -30,11 +30,12 @@
                                 border-radius: 8px;
                                 color: #13293d;
                                 cursor: pointer;
-                                font-size: 1em;
+                                font-Family: 'Chakra Petch', sans-serif;
+                                font-size: 1.5em;
                                 letter-spacing: 0.21px;
                                 line-height: 16px;
                                 max-width: 255px;
-                                padding: 20px 52px;
+                                padding: 15px 15px;
                                 text-align: center;
                                 transition-duration: 0.15s;
                                 transition-property: background-color;
@@ -43,7 +44,7 @@
                             }
                             
                             header {
-                                font-family: font-family: 'Press Start 2P', cursive;
+                                font-family: 'Press Start 2P', cursive, important;
                                 padding: 40px;
                                 text-align: center;
                                 background: green;
